# watchy

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/watchy/: __init__.py  auth.py  cli.py  github.py  paths.py  storage.py
src/watchy/cli/: __init__.py  commit.py  follows.py  stars.py
test/: __init__.py  test_commit_messages.py
