[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchy"
version = "0.1.0"
description = "A tool to fetch and track GitHub stargazers and followers"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests",
    "pandas",
    "pyarrow",
    "click",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
watchy = "watchy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/watchy"]

[tool.ruff]
line-length = 999
target-version = "py39"
