[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchy"
version = "0.0.7"
description = "Fetch and track GitHub stargazers and followers"
authors = [{name = "Ryan Williams", email = "ryan@runsascoded.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests",
    "click",
    "utz",
    "GitPython",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
watchy = "watchy.cli:main"

[project.urls]
repository = "https://github.com/runsascoded/watchy"

[tool.hatch.build.targets.wheel]
packages = ["src/watchy"]

[tool.ruff]
line-length = 999
target-version = "py39"
